Fix horizontal scrollbar on page change

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -14,6 +14,7 @@ body {
   margin: 0;
   line-height: 1.5;
   font-size: 16px;
+  overflow-x: hidden;
   font-family:
     "Figtree",
     -apple-system,
